# docx-translator

./: Dockerfile  README.md  README_api.md  build_archive.sh  docker-compose.yml  lang_code.yml  pyproject.toml  requirements.txt  tasks.md  translate.py
Input_docx/: brochure.docx
output_docx/: brochure_fr.docx  reference_translated_brochure.docx
translation/: translate_docx.py  utils.py
